<resources>
    <string name="app_name">Assignment_2</string>
    <string name="q_1">1. Which language is not officially supported in Android Studio for Android development? (SCQ)</string>
    <string name="q_2">2. What is the default database used in Android for local storage? (SCQ)</string>
    <string name="q_3">3. Which file contains the permissions, services, and activities used in an Android app? (SCQ)</string>
    <string name="q_4">4. Which of the following is used to pass data between two Android activities? (SCQ)</string>
    <string name="q_5">5. Which of the following are not valid layout types in Android? (SCQ)</string>
    <string name="q_6">6.  Which of the following are lifecycle methods of an Android activity? (MCQ)</string>
    <string name="q_7">7.  Which of the following are valid layout types in Android? (MCQ)</string>
    <string name="q_8">8.  Which XML attribute is used to define the width of a view in Android? (SCQ)</string>
    <string name="q_9">9. What is the purpose of the findViewById() method? (SCQ)</string>
    <string name="q_10">10.  Which of the following is used to make network requests in Android? (MCQ)</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="glide">Glide</string>
    <string name="okhttp">OkHttp</string>
    <string name="retrofit">Retrofit</string>
    <string name="volley">Volley</string>
    <string name="to_create_an_activity">To create an activity</string>
    <string name="to_retrieve_a_view_by_its_id">To retrieve a view by its ID</string>
    <string name="to_handle_user_input">To handle user input</string>
    <string name="to_fetch_data_from_the_database">To fetch data from the database</string>
    <string name="orientation">orientation</string>
    <string name="padding">padding</string>
    <string name="layout_height">layout_height</string>
    <string name="layout_width">layout_width</string>
    <string name="tablayout">TabLayout</string>
    <string name="linearlayout">LinearLayout</string>
    <string name="gridlayout">GridLayout</string>
    <string name="relativelayout">RelativeLayout</string>
    <string name="onresume">onResume()</string>
    <string name="ondestroy">onDestroy()</string>
    <string name="onstart">onStart()</string>
    <string name="oncreate">onCreate()</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="service">Service</string>
    <string name="fragment">Fragment</string>
    <string name="intent">Intent</string>
    <string name="res_values_strings_xml">res/values/strings.xml</string>
    <string name="build_gradle">build.gradle</string>
    <string name="androidmanifest_xml">AndroidManifest.xml</string>
    <string name="res_values_styles_xml">res/values/styles.xml</string>
    <string name="postgresql">PostgreSQL</string>
    <string name="mysql">MySQL</string>
    <string name="sqlite">SQLite</string>
    <string name="firebase">Firebase</string>
    <string name="c">C++</string>
    <string name="swift">Swift</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="rating">Rating</string>
</resources>